# manhattan-world-sim

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  env.yml  mahattan-simulator.code-workspace  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  main.yml  mypy.yml
examples/: example.py  multi_robot_random_NF_iSAM_format.py  single_robot_random_NF_iSAM_format.py  single_robot_random_trajectory.py
manhattan/agent/: agent.py
manhattan/environment/: environment.py
manhattan/factor_graph/: factor_graph.py  parse_factor_graph.py  save_file_utils.py
manhattan/geometry/: TwoDimension.py
manhattan/measurement/: __init__.py  loop_closure.py  odom_measurement.py  range_measurement.py
manhattan/noise_models/: __init__.py  loop_closure_model.py  odom_noise_model.py  range_noise_model.py
manhattan/simulator/: save_file_utils.py  simulator.py
manhattan/utils/: attrib_utils.py  sample_utils.py
profiling/: cprofile_example.py  flamegraph.bash  flamegraph_example.py  profile_example.py
scripts/: data_dirs.txt  run_simulations.py
src/: Agent.py  Environment.py  Simulator.py
src/agent/: agent.py
src/environment/: environment.py
src/geometry/: TwoDimension.py
src/measurement/: __init__.py  odom_measurement.py
src/noise_models/: __init__.py  noise_model.py  odom_noise_model.py  range_noise_model.py
src/simulator/: simulator.py
tests/: test_environments.py
