[options]
# install_requires reads from requirements.txt
install_requires=
    attrs
    numpy
    scipy

packages = find:

[metadata]
name = manhattan
version = 0.1.0
description = A Manhattan World simulator for simulating SLAM problems
author = Alan Papalia
author_email = apapalia@mit.edu
url = https://github.com/MarineRoboticsGroup/manhattan-world-sim
classifiers =
    Typing :: Typed

[options.packages.find]
exclude = examples*
