[options]
# install_requires reads from requirements.txt
install_requires=
    attrs
    numpy
    scipy
    matplotlib<3.7.0
    PyQt5
    coloredlogs

packages = find:

[metadata]
name = manhattan
version = 0.1.0
description = A Manhattan World simulator for simulating SLAM problems
author = Alan Papalia
author_email = apapalia@mit.edu
url = https://github.com/MarineRoboticsGroup/manhattan-world-sim
classifiers =
    Typing :: Typed

[options.packages.find]
exclude = examples*

[options.package_data]
manhattan = py.typed
